fixed the alignment

--- a/src/shared/components/search-result/search-result.component.scss
+++ b/src/shared/components/search-result/search-result.component.scss
@@ -62,7 +62,6 @@ a:hover {
 .govuk-link-with-padding {
   padding-right: 15px;
   padding-left: 15px;
-  margin-bottom: 30px;
 }
 .search-result-column-header {
   width: unset;
